applications/media-experimental/base/_instance/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-template
  labels:
    app: app-template
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 65535  # overridden per app (JSON patch)
      targetPort: http
      protocol: TCP
  selector:
    app: app-template
